upgrated docker to java 21